--- a/libmx/Makefile
+++ b/libmx/Makefile
@@ -5,8 +5,8 @@ SRC = src
 OBJ = obj
 
 INC = inc
-# FLAGS = -std=c11 -Wall -Wextra -Werror -Wpedantic
-FLAGS = -std=c11 -Wall -Wextra 
+
+FLAGS = -std=c11 -Wall -Wextra  -Wpedantic
 
 all: install clean
 
